--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
             <h1>
                 Hola Queridos estudiantes bienvenidos a este gran proyecto.
             </h1>
+            <h2>
+                Tomar el curso de github
+            </h2>
         </div>
     </body>
 </html>
